--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mui/x-charts": "^6.18.1",
     "firebase": "^10.6.0",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.18.0"
